Modify authorization views

--- a/App/View/Templates/Authorization/registration.html
+++ b/App/View/Templates/Authorization/registration.html
@@ -1,17 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sing up</title>
-  <!-- Bootstrap core CSS -->
-  <link href="/css/bootstrap.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="/css/authorization.css" rel="stylesheet">
-</head>
-<body class="text-center">
 
-<main class="form-signup">
+<main class="main text-center align-item-center d-flex justify-content-center form-signin mt-5">
   <form action="" method="post">
     <img class="mb-4" src="" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
@@ -24,6 +12,3 @@
     <button class="w-100 btn btn-lg btn-primary" name="submit" type="submit">Sign up</button>
   </form>
 </main>
-
-</body>
-</html>
